<resources>
    <string name="app_name">bestworld</string>

    <string name="contentDescription">contentDescription</string>
    <string name="somethingWentWrong">Algo ha salido mal</string>

    <!-- DRAWER HEADER -->
    <string name="dh_welcome">BIENVENID@ A</string>
    <string name="dh_app_name">BEST WORLD</string>
    <string name="dh_sign_up">INICIAR SESIÓN</string>

    <!-- DRAWER MENU -->
    <string name="dm_title_one">ACCION</string>
    <string name="dm_title_two">MIS COSAS</string>
    <string name="dm_title_three">GENTE</string>
    <string name="dm_all_events">EVENTOS</string>
    <string name="dm_events">EVENTOS DE MI RED</string>
    <string name="dm_posts">PUBLICACIONES</string>
    <string name="dm_created_events">EVENTOS CREADOS</string>
    <string name="dm_assist_events">EVENTOS QUE ASISTIRÉ</string>
    <string name="dm_fav_posts">PUBLICACIONES FAVORITAS</string>
    <string name="dm_all_users_people">PERSONAS</string>
    <string name="dm_all_users_companies">EMPRESAS</string>
    <string name="dm_user_profile">MI PERFIL</string>

    <string name="dm_opened">menu opened</string>
    <string name="dm_closed">menu closed</string>

    <string name="tabEvents">Eventos</string>
    <string name="tabPosts">Posts</string>
    <string name="tabAdd">Subir contenido</string>
    <string name="tabUsers">Usuarios</string>
    <string name="tabUserProfile">Mi perfil</string>

    <!-- CATEGORY -->
    <string name="category_global">TODO LO QUE EXISTA</string>
    <string name="category_my_network">EN MI RED</string>

    <!-- POSTS -->
    <string name="firstLogIn">¡Para ver esto primero tienes que iniciar sesión!</string>

    <!-- EVENTS -->
    <string name="allEvents">Todos los eventos</string>
    <string name="EnvironmentalTitleTab">Acción medioambiental</string>
    <string name="DivulgationTitleTab">Divulgación</string>
    <string name="WorkshopTitleTab">Talleres ambientales</string>
    <string name="MobilizationTitleTab">Movilización</string>
    <string name="FarmingTitleTab">Agricultura colaborativa</string>
    <string name="SharingCarTitleTab">Compartiendo coche</string>
    <string name="OtherTitleTab">Otros</string>

    <!-- EVENT FILE -->
    <string name="createdBy">Creado por</string>
    <string name="additionalInfo">Información adicional</string>
    <string name="atTime">a las</string>
    <string name="signUpToEvent">ASISTIRÉ</string>
    <string name="signDownToEvent">YA NO ASISTIRÉ</string>
    <string name="createdEvents">EVENTOS CREADOS</string>
    <string name="assistedEvents">EVENTOS APUNTADOS</string>
    <string name="suchEmpty">Vaya, parece que esto está vacío</string>

    <!-- REGISTER -->
    <string name="name">NOMBRE</string>
    <string name="email">EMAIL</string>
    <string name="profilePicture">Foto de perfil</string>
    <string name="passwordDetails">La contraseña debe tener 6 caracteres como mínimo.</string>
    <string name="password">CONTRASEÑA</string>
    <string name="repeat_password">REPITE LA CONSTRASEÑA</string>
    <string name="log_in_title">INICIAR SESIÓN</string>
    <string name="register_title">REGISTRARSE</string>
    <string name="log_in">ACCEDER</string>
    <string name="sign_up">CREAR CUENTA</string>
    <string name="dontHaveAccount">¿No tienes cuenta?</string>
    <string name="registerHere">REGISTRATE AQUÍ</string>
    <string name="particular">PARTICULAR</string>
    <string name="comapany">EMPRESA</string>
    <string name="usersParticulars">PERSONAS</string>
    <string name="usersCompanies">EMPRESAS</string>
    <string name="errorMessageLogIn">Error al iniciar sesión\nCredenciales incorrectas</string>
    <string name="errorMessageEmailNotValid">Email no válido</string>
    <string name="errorMessageEmailInUse">Email en uso</string>
    <string name="errorMessageNotMatchingPasswords">Las contraseñas no coinciden</string>
    <string name="errorMessagePasswords6chars">La contraseña debe tener mínimo 6 caracteres</string>

    <!-- CREATE EVENT -->
    <string name="createEventTitle">CREAR EVENTO</string>
    <string name="eventTitle">Titulo</string>
    <string name="eventDescription">Descripción</string>
    <string name="eventAddress">Dirección</string>
    <string name="eventOtherInfo">Información adicional (opcional)</string>
    <string name="selectDate">FECHA</string>
    <string name="selectHour">HORA</string>
    <string name="uploadImage">SUBIR FOTO</string>
    <string name="errorMessageEventTitle">Introduce un título válido</string>
    <string name="errorMessageEventDescription">El evento necesita una descripción</string>
    <string name="errorMessageEventAddress">El evento necesita una dirección</string>
    <string name="errorMessageEventCategory">Selecciona la categoría del evento</string>
    <string name="errorMessageEventDate">Seleccione una fecha para el evento</string>
    <string name="errorMessageEventTime">Seleccione una hora para el evento</string>

    <!-- CREATE POST -->
    <string name="hintPostText">¿Qué quieres publicar?</string>
    <string name="publish">PUBLICAR</string>
    <string name="errorMessagePostText">No puedes publicar un mensaje en blanco</string>

    <!-- USERS -->
    <string name="searchUsers">Buscar personas</string>
    <string name="searchCompanies">Buscar empresas</string>

    <!-- MY PROFILE -->
    <string name="myNetwork">%1$s EN MI RED</string>
    <string name="addToMyNetwork">AÑADIR A MI RED</string>
    <string name="removeFromMyNetwork">QUITAR DE MI RED</string>
    <string name="wannaCloseSession">¿Seguro que quieres cerrar sesión?</string>
    <string name="closeSession">CERRAR SESIÓN</string>
    <string name="cancel">CANCELAR</string>

    <!-- CREATE SELECTOR -->
    <string name="whatWannaChoose">¿Qué quieres hacer?</string>
    <string name="uploadPost">SUBIR UN POST</string>
    <string name="createEvent">CREAR UN EVENTO</string>

    <string-array name="event_labels">
        <item>Selecciona categoría</item>
        <item>@string/EnvironmentalTitleTab</item>
        <item>@string/DivulgationTitleTab</item>
        <item>@string/WorkshopTitleTab</item>
        <item>@string/MobilizationTitleTab</item>
        <item>@string/FarmingTitleTab</item>
        <item>@string/SharingCarTitleTab</item>
        <item>@string/OtherTitleTab</item>
    </string-array>

    <string-array name="user_event_labels">
        <item>Todos los eventos</item>
        <item>@string/EnvironmentalTitleTab</item>
        <item>@string/DivulgationTitleTab</item>
        <item>@string/WorkshopTitleTab</item>
        <item>@string/MobilizationTitleTab</item>
        <item>@string/FarmingTitleTab</item>
        <item>@string/SharingCarTitleTab</item>
        <item>@string/OtherTitleTab</item>
    </string-array>

</resources>