<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/dm_title_one">
        <menu>
            <item
                android:id="@+id/all_events"
                android:icon="@drawable/ic_tab_all_events"
                android:title="@string/dm_all_events" />
            <item
                android:id="@+id/events"
                android:icon="@drawable/ic_events"
                android:title="@string/dm_events" />
            <item
                android:id="@+id/posts"
                android:icon="@drawable/ic_post"
                android:title="@string/dm_posts" />
        </menu>
    </item>

    <item android:title="@string/dm_title_two">
        <menu>
            <item
                android:id="@+id/created_events"
                android:icon="@drawable/ic_created_events"
                android:title="@string/dm_created_events" />
            <item
                android:id="@+id/assist_events"
                android:icon="@drawable/ic_assist_event"
                android:title="@string/dm_assist_events" />
            <item
                android:id="@+id/fav_posts"
                android:icon="@drawable/ic_post_no_fav"
                android:title="@string/dm_fav_posts" />
        </menu>
    </item>

    <item android:title="@string/dm_title_three">
        <menu>
            <item
                android:id="@+id/all_users_people"
                android:icon="@drawable/ic_all_users"
                android:title="@string/dm_all_users_people" />
            <item
                android:id="@+id/all_users_companies"
                android:icon="@drawable/ic_company"
                android:title="@string/dm_all_users_companies" />
            <item
                android:id="@+id/user_profile"
                android:icon="@drawable/ic_user_profile"
                android:title="@string/dm_user_profile" />
        </menu>
    </item>
</menu>