<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">

        <include layout="@layout/include_back_toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/contentDescription"
                    android:src="@drawable/bw_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@color/gray"
                    android:textSize="35sp" />

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/particular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/particular" />

                <RadioButton
                    android:id="@+id/company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/comapany" />

            </RadioGroup>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_edit_text"
                android:drawableStart="@drawable/ic_user_name"
                android:drawablePadding="10dp"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_edit_text"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp" />

            <LinearLayout
                android:id="@+id/profilePictureButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_custom_button"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/profilePicture"
                    android:textAllCaps="true" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@color/black"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/passwordDetails"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_edit_text"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp" />

            <EditText
                android:id="@+id/repeatedPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_edit_text"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/repeat_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp" />

            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/design_default_color_error"
                android:textSize="14sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/sign_up" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/loading"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/loading_dots"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>