<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">

        <include layout="@layout/include_back_toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBar"
        android:layout_marginVertical="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/eventTitle"
                android:importantForAutofill="no"
                android:inputType="text"
                android:lines="1"
                android:maxLength="60"
                android:maxLines="1"
                android:padding="15dp" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/eventDescription"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="15dp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_edit_text"
                android:drawableStart="@drawable/ic_address"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/eventAddress"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress"
                android:lines="1"
                android:maxLines="1"
                android:padding="12dp" />

            <EditText
                android:id="@+id/otherInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/eventOtherInfo"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="15dp" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/uploadImage" />

            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/design_default_color_error"
                android:textSize="14sp" />

            <Button
                android:id="@+id/createButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/createEventTitle" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/loading"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/loading_dots" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>