<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7CC1C1C1"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_fragment_selector"
        android:elevation="5dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/whatWannaChoose"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/uploadPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_custom_button"
            android:elevation="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/uploadPost"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_create_post" />

        <TextView
            android:id="@+id/createEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_custom_button"
            android:elevation="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/createEvent"
            android:textSize="18sp"
            android:padding="12dp"
            app:drawableStartCompat="@drawable/ic_create_event" />

    </LinearLayout>

</RelativeLayout>